# ktools

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: c-cpp-mac.yml  github-actions-test.yml
examples/: .gitignore
examples/input/: periods.csv
src/: CMakeLists.txt
src/aalcalc/: CMakeLists.txt
src/aalcalctocsv/: CMakeLists.txt
src/cdftocsv/: CMakeLists.txt  cdftocsv.cpp
src/filetool/: .gitignore  BaseFileReader.h  CMakeLists.txt  CoveragesFile.h  DamageBinDictionaryFile.h  EventFile.h  FmPolicyTCFile.h  FootprintFile.h  FootprintIndexFile.h  Interfaces.h  ItemsFile.h  VulnerabilitiesFile.h  aalcalcfile.h  binfilereader.h  csvfilereader.h  filetool  filetool.cpp  filetool.h  filetool_tests  fmprofilefile.h  fmprogrammefile.h  fmsummaryxreffile.h  fmxreffile.h  gulsummaryxreffile.h  main.cpp  periodsfile.h  returnperiodfile.h
src/filetool/test/: TestFiletoolFiles.cpp
src/fmcalc/: .gitignore  CMakeLists.txt  fmcalc.h  fmcalcrules.cpp
src/fmcalc/test/: fmcalc_tests.cpp
src/getmodel/: CMakeLists.txt  getmodel.cpp
src/logging/: log.h
src/summarycalc/: CMakeLists.txt  summarycalc.cpp  summarycalc.h
src/summarycalctobin/: CMakeLists.txt
src/summaryindex/: CMakeLists.txt
