include_directories(logging filetool ${Boost_INCLUDE_DIRS})

add_subdirectory(aalcalc)
add_subdirectory(aalcalctocsv)
add_subdirectory(cdftocsv)
add_subdirectory(coveragetobin)
add_subdirectory(coveragetocsv)
add_subdirectory(eltcalc)
add_subdirectory(eve)
add_subdirectory(filetool)
add_subdirectory(fmcalc)
add_subdirectory(fmtocsv)
add_subdirectory(getmodel)
add_subdirectory(gulcalc)
add_subdirectory(gulsummaryxreftobin)
add_subdirectory(gulsummaryxreftocsv)
add_subdirectory(gultobin)
add_subdirectory(gultocsv)
add_subdirectory(kat)
add_subdirectory(ktgetmem)
add_subdirectory(leccalc)
add_subdirectory(occurrencetobin)
add_subdirectory(occurrencetocsv)
add_subdirectory(periodstobin)
add_subdirectory(periodstocsv)
add_subdirectory(pltcalc)
add_subdirectory(randtobin)
add_subdirectory(randtocsv)
add_subdirectory(returnperiodtobin)
add_subdirectory(returnperiodtocsv)
add_subdirectory(summarycalc)
add_subdirectory(summarycalctobin)
add_subdirectory(summarycalctocsv)
add_subdirectory(summaryindex)
add_subdirectory(validateitems)
#add_subdirectory(wingetopt)
